<resources>
    <string name="app_name">WeChatSon</string>
    <string name="header_login">Welcome, My Old Friend.</string>
    <string name="hint_name">请输入账号</string>
    <string name="hint_password">请输入密码</string>
    <string name="Reg_button">注册</string>
    <string name="Reg_button_phone">手机号码注册</string>
    <string name="Reg_button_agree">注册即同意软件隐私条款</string>
    <string name="WeChat_address">通讯录</string>
    <string name="WeChat_Talk">工作室群聊</string>
    <string name="WeChat_Me">我的</string>
    <string name="WeChat_name">用户名</string>
    <string name="WeChat_login">登录</string>
    <string name="WeChat_Reg">注册</string>
    <string name="WeChat_User_Name">微信号:</string>
    <string name="WeChat_money">钱包</string>
    <string name="WeChat_havenew">收藏</string>
    <string name="WeChat_Album">相册</string>
    <string name="WeChat_CardBag">卡包</string>
    <string name="WeChat_Expression">表情</string>
    <string name="WeChat_Setting">设置</string>
    <string name="WeChat_Send">发送</string>
    <string name="WeChat_ComeBack">返回</string>
    <string name="more_chat">群聊记录</string>
    <string name="text">微信号/QQ号/邮箱登录</string>
    <string name="address">账号</string>
    <string name="password">请填写密码</string>
    <string name="password_input">密码</string>
    <string name="byphone">用手机号登录</string>
    <string name="data">请输入你的账号，密码，用户名</string>
    <string name="cancel">取消</string>
    <string name="user_input">请输入用户名</string>
    <string name="user">用户名</string>
</resources>
