<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">
    <!--头部-->
    <RelativeLayout
        android:id="@+id/login_header"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="80dp">
        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#82ffa1"
            android:text="@string/cancel" />
    </RelativeLayout>
    <!--文字-->
    <RelativeLayout
        android:id="@+id/login_text_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/data"
            android:textColor="#000000"
            android:textSize="22sp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/address_input"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_text_header">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="#000000"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/User_Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="8"
            android:hint="@string/text"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/password_input"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/address_input">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_input"
            android:textColor="#000000"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/Password_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="8"
            android:inputType="number"
            android:hint="@string/password"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/user_new"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_input">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textColor="#000000"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/user_name_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="8"
            android:hint="@string/user_input"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/Login_Button"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:background="#72e282"
        android:text="@string/WeChat_Reg"
        android:textColor="#ffffff" />
</RelativeLayout>