<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--容器-->
    <RelativeLayout
        android:id="@+id/menu_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </RelativeLayout>
    <!--功能菜单-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="#eaeaea">
        <!--通讯录-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/main_Address"
            android:gravity="center"
            android:layout_weight="1.5">
            <ImageView
                android:id="@+id/img_address"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/addressbook"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WeChat_address"
                android:textSize="12sp"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>
        <!--聊天-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/main_Chat"
            android:gravity="center"
            android:layout_weight="1.5">
            <ImageView
                android:id="@+id/img_chat"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/wechat"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WeChat_Talk"
                android:textSize="12sp"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/main_Me"
            android:gravity="center"
            android:layout_weight="1.5">
            <ImageView
                android:id="@+id/img_Me"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/me"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WeChat_Me"
                android:textSize="12sp"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>